# fork-sharing-checker

./: .travis.yml  Authors.txt  CMakeLists.txt  README.md  configure
cmake/: macros.cmake
dev/: gen-archive.sh  packaging.sh  update-version.sh
example/: CMakeLists.txt  example-simple.cpp  example-timeline.cpp  main.cpp
extern-deps/: CMakeLists.txt
packaging/: README.md
packaging/archlinux/: PKGBUILD
packaging/debian/: changelog  control  copyright
packaging/fedora/: fork-sharing-checker.spec
packaging/gentoo/dev-util/fork-sharing-checker/: fork-sharing-checker-0.1.0-dev.ebuild  fork-sharing-checker-0.1.0.ebuild  fork-sharing-checker-0.2.0-dev.ebuild
src/: CMakeLists.txt
src/example/: main.cpp
src/integration/: CMakeLists.txt  fork-sharing-checker.pc.in
src/lib/: CMakeLists.txt  COWTracker.cpp  COWTracker.hpp  Checker.cpp  Checker.h  ForkSharingChecker.cpp  ForkSharingChecker.h  LinuxProcMapReader.cpp  LinuxProcMapReader.hpp  NoFreeAllocator.cpp  NoFreeAllocator.hpp  ProcPagemapReader.cpp  ProcPagemapReader.hpp  Reader.cpp  Reader.hpp  STLNoFreeAllocator.hpp
src/lib/tests/: CMakeLists.txt  TestProcPagemapReader.cpp
src/tool/: CMakeLists.txt  main.cpp
src/view/: CMakeLists.txt  index.html
