######################################################
#            PROJECT  : fork-sharing-checking        #
#            VERSION  : 0.1.0                        #
#            DATE     : 02/2016                      #
#            AUTHOR   : Valat Sébastien - CERN       #
#            LICENSE  : CeCILL-C                     #
######################################################

######################################################
add_subdirectory(gmock-1.7.0)
add_subdirectory(from-htopml)