######################################################
#            PROJECT  : fork-sharing-checker         #
#            VERSION  : 0.1.0                        #
#            DATE     : 03/2016                      #
#            AUTHOR   : Valat Sébastien - CERN       #
#            LICENSE  : CeCILL-C                     #
######################################################

######################################################
add_subdirectory(lib)
add_subdirectory(tool)
add_subdirectory(view)
add_subdirectory(integration)