######################################################
#            PROJECT  : fork-sharing-checker         #
#            VERSION  : 0.1.0                        #
#            DATE     : 03/2016                      #
#            AUTHOR   : Valat Sébastien - CERN       #
#            LICENSE  : CeCILL-C                     #
######################################################

######################################################
install(FILES index.html DESTINATION share/fork-sharing-checker/view)